# stock

./: .gitignore  CHANGELOG.md  README.md  cabal.project  repl.sh  stock.cabal
aeson/: stock-aeson.cabal
aeson/Stock/: Aeson.hs
aeson/test/: Test.hs
bench/: Bench.hs  Configs.hs
deepseq/: stock-deepseq.cabal
deepseq/Stock/: NFData.hs
deepseq/inspection/: Inspection.hs
deepseq/test/: Test.hs
docs/: iterating-through-play.md  override-design.md
examples/: Main.hs  QualOverride.hs
hashable/: LICENSE  stock-hashable.cabal
hashable/Stock/: Hashable.hs
hashable/inspection/: Inspection.hs
hashable/test/: Test.hs
inspection/: Inspection.hs
negative/: RunNegative.hs  run-negative.sh
plugin/: Stock.hs
plugin/Stock/: Applicative.hs  Bifunctor.hs  Bounded.hs  Classes1.hs  Compat.hs  Derive.hs  Enum.hs  Eq.hs  Functor.hs  Generic.hs  Internal.hs  Ord.hs  Override.hs  Read.hs  Semigroup.hs  Show.hs  Surface.hs  TestEquality.hs  Trans.hs  Traversable.hs
profunctors/: stock-profunctors.cabal
profunctors/Stock/: Profunctor.hs
profunctors/test/: Test.hs
quickcheck/: stock-quickcheck.cabal
quickcheck/Stock/: QuickCheck.hs
quickcheck/test/: Test.hs
showcase/: Showcase.hs  stock-showcase.cabal
src/Stock/: Type.hs
test/: Overrides.hs  SimpleTest.hs  Spec.hs  Twin.hs
