cabal-version:       3.0
name:                stock-profunctors
version:             0.1.0.0
x-revision:          11
synopsis:            Derive Profunctor via the stock plugin
description:

  The <https://hackage.haskell.org/package/stock stock> plugin
  provides a newtype
  __@<https://hackage-content.haskell.org/package/stock-0.1.0.0/docs/Stock.html#t:Stock Stock>@__ 
  for deriving and synthesising instances at compile
  time. __stock-profunctors__ extends it to support
  @<https://hackage-content.haskell.org/package/profunctors-5.6.3/docs/Data-Profunctor.html#t:Profunctor Profunctor>@.

  > {-# options_ghc -fplugin Stock #-}
  > 
  > {-# language DerivingVia #-}
  > 
  > import Data.Kind
  > import Stock
  > import Stock.Profunctor
  > 
  > type    Foo :: Type -> Type -> Type
  > newtype Foo i o = Foo ((((o -> i) -> o) -> i) 
  >                     -> (((i -> o) -> i) -> o))
  >   deriving Functor    via Stock1 (Foo i)
  >   deriving Profunctor via Stock2 Foo

  __stock-profunctors__ provides an instance for @DeriveStock2
  Profunctor@ that signals to the plugin how to derive
  @<https://hackage-content.haskell.org/package/profunctors-5.6.3/docs/Data-Profunctor.html#t:Profunctor Profunctor>@.

  <https://hackage.haskell.org/package/stock stock> companion packages include:

  * __@<https://hackage.haskell.org/package/stock-deepseq stock-deepseq>@__: @<https://hackage-content.haskell.org/package/deepseq-1.5.2.0/docs/Control-DeepSeq.html#t:NFData NFData>@, @<https://hackage-content.haskell.org/package/deepseq-1.5.2.0/docs/Control-DeepSeq.html#t:NFData1 NFData1>@, @<https://hackage-content.haskell.org/package/deepseq-1.5.2.0/docs/Control-DeepSeq.html#t:NFData2 NFData2>@
  * __@<https://hackage.haskell.org/package/stock-hashable stock-hashable>@__: @<https://hackage-content.haskell.org/package/hashable-1.5.1.0/docs/Data-Hashable.html#t:Hashable Hashable>@, @<https://hackage-content.haskell.org/package/hashable-1.5.1.0/docs/Data-Hashable-Lifted.html#t:Hashable1 Hashable1>@, @<https://hackage-content.haskell.org/package/hashable-1.5.1.0/docs/Data-Hashable-Lifted.html#t:Hashable2 Hashable2>@
  * __@<https://hackage.haskell.org/package/stock-aeson stock-aeson>@__: @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:ToJSON ToJSON>@, @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:ToJSON1 ToJSON1>@, @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:ToJSON2 ToJSON2>@; @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:FromJSON FromJSON>@, @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:FromJSON1 FromJSON1>@, @<https://hackage-content.haskell.org/package/aeson-2.3.0.0/docs/Data-Aeson.html#t:FromJSON2 FromJSON2>@
  * __@<https://hackage.haskell.org/package/stock-quickcheck stock-quickcheck>@__: @<https://hackage-content.haskell.org/package/QuickCheck-2.18.0.0/docs/Test-QuickCheck.html#t:Arbitrary Arbitrary>@, @<https://hackage-content.haskell.org/package/QuickCheck-2.18.0.0/docs/Test-QuickCheck.html#t:Arbitrary1 Arbitrary1>@, @<https://hackage-content.haskell.org/package/QuickCheck-2.18.0.0/docs/Test-QuickCheck.html#t:Arbitrary2 Arbitrary2>@; @<https://hackage-content.haskell.org/package/QuickCheck-2.18.0.0/docs/Test-QuickCheck.html#t:CoArbitrary CoArbitrary>@
  * __@stock-profunctors@__: @<https://hackage-content.haskell.org/package/profunctors-5.6.3/docs/Data-Profunctor.html#t:Profunctor Profunctor>@

license:             BSD-3-Clause
license-file:        LICENSE
author:              Baldur Blöndal
maintainer:          baldur.blondal@iohk.io
category:            Type System
build-type:          Simple
tested-with:         GHC == 9.8.1, GHC == 9.10.3, GHC == 9.12.4, GHC == 9.14.1

library
  exposed-modules:   Stock.Profunctor
  build-depends:     base >=4.18 && <5,
                     ghc >=9.6 && <9.16,
                     stock >=0.1 && <0.2,
                     profunctors >=5.6 && <6
  hs-source-dirs:    .
  default-language:  GHC2021
  ghc-options:       -Wall

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  build-depends:     base, stock, stock-profunctors, profunctors
  ghc-options:       -fplugin=Stock
  hs-source-dirs:    test
  default-language:  GHC2021

source-repository head
  type:     git
  location: https://github.com/Icelandjack/stock.git
  subdir:   profunctors
